TFP-6069 ny integrasjon med fpsak, nytt endepunkt og dtos. Fjerner eget domeneobjekter og tilhørende mapping